# tiramisu

./: .gitignore  .gitmodules  .travis.yml  ARTIFACT_EVALUATION.md  ARTIFACT_EVALUATION.txt  CMakeLists.txt  CONTRIBUTORS  Doxyfile  INSTALL  INSTALL.md  LICENSE  Makefile  README  README.distributed.md  README.md  TODO.txt  benchmark_list  build-install.sh  configure.cmake  configure.cmake.template  configure_path.cmake  configure_paths.sh  design_changes.txt  generate_config_path.sh  generated_conv_tiramisu.o.h  get_and_install_halide.sh  get_and_install_isl.sh  get_and_install_tiramisu_dependencies.sh  how_to_translate_halide_commands_to_tiramisu.txt  lbb.sh  ld.sh  new.o.h  new_generator  new_test.sh  non_supported_halide_commands.txt  performance_CPU.csv  performance_GPU.csv  rank.txt  retrieve_and_compile_halide.sh  retrieve_compile_halide.sh  (+5 more)
benchmarks/: CMakeLists.txt  README.md  benchmark_list.txt  benchmarks.h  compile_and_run_benchmarks.sh  compile_and_run_benchmarks_mpi.sh  configure_paths.sh  run_benchmarks.sh  run_benchmarks_mpi.sh  tune_parameters.py
benchmarks/FlexNLP/: README.md
benchmarks/automatic_comm/: blurautodist_ref.cpp  blurautodist_tiramisu.cpp  blurdist_ref.cpp  blurdist_tiramisu.cpp  convolutionautodist_ref.cpp  convolutionautodist_tiramisu.cpp  convolutiondist_ref.cpp  convolutiondist_tiramisu.cpp  cvtcolorautodist_ref.cpp  cvtcolorautodist_tiramisu.cpp  cvtcolordist_ref.cpp  cvtcolordist_tiramisu.cpp  dist_benchmark_list.txt  edgeautodist_ref.cpp  edgeautodist_tiramisu.cpp  edgedist_ref.cpp  edgedist_tiramisu.cpp  warpdist_ref.cpp  warpdist_tiramisu.cpp  wrapper_blurautodist.cpp  wrapper_blurautodist.h  wrapper_blurdist.cpp  wrapper_blurdist.h  wrapper_convolutionautodist.cpp  wrapper_convolutionautodist.h  wrapper_convolutiondist.cpp  wrapper_convolutiondist.h  wrapper_cvtcolorautodist.cpp  wrapper_cvtcolorautodist.h  wrapper_cvtcolordist.cpp  wrapper_cvtcolordist.h  wrapper_edgeautodist.cpp  wrapper_edgeautodist.h  wrapper_edgedist.cpp  wrapper_edgedist.h  wrapper_warpdist.cpp  wrapper_warpdist.h
benchmarks/framework_benchmarking/: README.md  compile_and_run_benchmarks.sh  configure.sh
benchmarks/gen_comm/: convolutiondist_ref.cpp  convolutiondist_tiramisu.cpp  cvtcolordist_tiramisu.cpp  dist_benchmark_list.txt  edgedist_ref.cpp  edgedist_tiramisu.cpp  wrapper_convolutiondist.cpp  wrapper_convolutiondist.h  wrapper_cvtcolordist.h  wrapper_edgedist.cpp  wrapper_edgedist.h
benchmarks/halide/: blurxy_algorithm.cpp  blurxy_coli.cpp  blurxy_ref.cpp  blurxy_tiramisu.cpp  blurxyautodist_tiramisu.cpp  blurxydist_ref.cpp  blurxydist_tiramisu.cpp  compile_using_halide.sh  configure.h  convolution_layer_ref.cpp  convolution_layer_tiramisu.cpp  convolution_ref.cpp  convolution_tiramisu.cpp  convolutiongpu_ref.cpp  convolutiongpu_tiramisu.cpp  cvt_color_coli.cpp  cvt_color_ref.cpp  cvtcolor_coli.cpp  cvtcolor_ref.cpp  cvtcolor_tiramisu.cpp  cvtcolorautodist_ref.cpp  cvtcolorautodist_tiramisu.cpp  cvtcolordist_ref.cpp  cvtcolordist_tiramisu.cpp  cvtcolorgpu_ref.cpp  cvtcolorgpu_tiramisu.cpp  divergence2d_coli.cpp  divergence2d_ref.cpp  divergence2d_tiramisu.cpp  edge_ref.cpp  edge_tiramisu.cpp  edgegpu_ref.cpp  edgegpu_tiramisu.cpp  filter2D_coli.cpp  filter2D_nordom_coli.cpp  filter2D_nordom_ref.cpp  filter2D_ref.cpp  filter2D_tiramisu.cpp  fusion_coli.cpp  fusion_ref.cpp  (+134 more)
benchmarks/linear_algebra/: compile_and_run_benchmarks.sh  gemver.cpp  spmv.cpp  wrapper_gemver.cpp  wrapper_gemver.h  wrapper_spmv.cpp
benchmarks/stencils/: stencil1_coli.cpp  stencil1_tiramisu.cpp  wrapper_stencil1.cpp  wrapper_stencil1.h
packaging/: CMakeLists.txt
packaging/common/: tiramisuConfig.cmake
python_bindings/src/: #PyCodegen.cpp#  #PyVar.cpp#  .#PyCodegen.cpp  CMakeLists.txt  PyBuffer.cpp  PyBuffer.h  PyCodegen.cpp  PyCodegen.h  PyComputation.cpp  PyComputation.h  PyConstant.cpp  PyConstant.h  PyExpr.cpp  PyExpr.h  PyFunction.cpp  PyFunction.h  PyInit.cpp  PyInit.h  PyInput.cpp  PyInput.h  PyTiramisu.cpp  PyTiramisu.h  PyType.cpp  PyType.h  PyVar.cpp  PyVar.h
src/: #tiramisu_function.cpp#  Band.cpp  CMakeLists.txt  DebugIR.cpp  IR.cpp  codegen_halide_copy  coli_codegen_c.cpp  coli_codegen_from_halide.cpp  coli_codegen_halide.cpp  coli_codegen_halide_lowering.cpp  coli_codegen_halide_to_c.cpp  coli_computation.cpp  coli_core.cpp  coli_debug.cpp  coli_ir.cpp  coli_utils.cpp  distributed_module.py  tiramisu_auto_scheduler.cpp  tiramisu_block.cpp  tiramisu_codegen_c.cpp  tiramisu_codegen_cuda.cpp  tiramisu_codegen_from_halide.cpp  tiramisu_codegen_halide.cpp  tiramisu_codegen_halide_lowering.cpp  tiramisu_codegen_halide_to_c.cpp  tiramisu_computation_graph.cpp  tiramisu_core.cpp  tiramisu_cuda_wrappers.cpp  tiramisu_debug.cpp  tiramisu_expr.cpp  tiramisu_externs.cpp  tiramisu_flexnlp_wrappers.cpp  tiramisu_function.cpp  tiramisu_mkl_wrappers.cpp  tiramisu_mpi.cpp  tiramisu_mpi.cpp.logging  tiramisu_topo_map.cpp  tiramisu_utils.cpp
src/FlexNLP/: LSTM.h  LSTMAcc.h  README.md  Utils.h  main.cpp  pe_int8_top.h  tiramisu_flexnlp.h
src/auto_scheduler/: CMakeLists.txt  tiramisu_ast.cpp  tiramisu_auto_scheduler.cpp  tiramisu_beam_search.cpp  tiramisu_computation_graph.cpp  tiramisu_dnn_accesses.cpp  tiramisu_eval_dnn_model.cpp  tiramisu_evaluator.cpp  tiramisu_optimization_info.cpp  tiramisu_schedules_generator.cpp  tiramisu_search_method.cpp  tiramisu_simple_rnn_evaluator.cpp  tiramisu_states_generator.cpp  tiramisu_utils.cpp
src/distributed_version_32/: distributed_main.py
tests/: CMakeLists.txt  README.md  gen_test.sh  generate_code_from_halide_IR.cpp  generated_C_pgm_tester.cpp  halideTest.cpp  list_of_tests.txt  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp  test_08.cpp  test_09.cpp  test_10.cpp  test_100.cpp  test_1000.cpp  test_1001.cpp  test_1002.cpp  test_1003.cpp  test_1004.cpp  test_101.cpp  test_102.cpp  test_105.cpp  test_106.cpp  test_107.cpp  test_108.cpp  test_109.cpp  test_11.cpp  test_110.cpp  test_111.cpp  test_112.cpp  test_113.cpp  test_114.cpp  test_115.cpp  test_116.cpp  test_117.cpp  test_118.cpp  (+395 more)
(+2658 files in other folders)
